@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.aeonmq5.nexusmod" name="Aeon MQ 5 Nexusmod" provider-name="MarcosQui / scott967" version="12.3.0">
+<addon id="skin.aeonmq5.nexusmod" name="Aeon MQ 5 Nexusmod" provider-name="MarcosQui / scott967" version="12.4.0">
 	<requires>
 		<import addon="xbmc.gui" version="5.16.0" />
 		<import addon="script.artistslideshow" version="3.3.0" />
@@ -13,6 +13,7 @@
 		<import addon="script.skin.info.service" version="1.1.2" optional="true" />
 		<import addon="script.toolbox" version="2.0.0" />
 		<import addon="script.tv.show.next.aired" version="6.0.15+matrix.3"  optional="true"/>
+		<import addon="script.libraryeditor" version="0.9.0+matrix.1"  optional="true"/>
 		<import addon="service.skin.widgets" version="0.0.33+matrix.3" />
 	</requires>
 	<extension debugging="false" effectslowdown="0.75" point="xbmc.gui.skin">
@@ -66,10 +67,11 @@
 			<icon>resources/icon.png</icon>
 			<fanart>resources/fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR=FFFF8C00]BUILD 12.3.0- RELEASE DATE 05/25/2022 for Kodi NEXUS 20 Nightly[/COLOR][/B]
-This is a MOD of Aeon MQ5 by user scott967.  Compatible with Kodi Nexus nightly release 20 A1 + 
+		<news>[B][COLOR=FFFF8C00]BUILD 12.4.0- RELEASE DATE 2022-11-14 for Kodi NEXUS 20 Beta 1[/COLOR][/B]
+This is a MOD of Aeon MQ5 by user scott967.  Compatible with Kodi Nexus release 20 B1 + 
 Support for color button
 Support for video HDR type
+Support for New Favourites Browser window
 
 		</news>
 	</extension>
